# Parallel_A_Star

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  compute_distance.c  compute_distance.h  data_struct_helper.h  hash_table.c  hash_table.h  input_generator  list.c  list.h  main.c  main.h  node.c  parallel_a_star  priority_queue.c  priority_queue.h  read_data.c  read_data.h  results.txt  run_serial_test.sh  run_single_test.sh  run_tests.sh  utility.c  utility.h
analysis/: read_logs.ipynb
data/: input.txt  matrix_10.txt  matrix_100.txt  matrix_1000.txt  matrix_1024.txt  matrix_20.txt  matrix_250.txt  matrix_256.txt  matrix_30.txt  matrix_50.txt  matrix_500.txt  matrix_64.txt  matrix_750.txt
include/: adjlist.h  colors.h  comm.h  compute_distance.h  compute_path.h  data_struct_helper.h  exit_points.h  generic_list.h  hash_table.h  input_generator.h  json_output.h  main.h  node.h  parallel.h  parallel_collection.h  parallel_distribution.h  parallel_paths.h  print.h  priority_queue.h  util.h  utility.h
src/: adjlist.c  comm.c  compute_distance.c  compute_path.c  exit_points.c  generic_list.c  graph.py  hash_table.c  input_generator.c  json_output.c  main.c  mock.c  parallel.c  parallel_collection.c  parallel_distribution.c  parallel_paths.c  print.c  priority_queue.c  util.c  utility.c
src/image_generation/: image_generation.py
